--- a/_posts/2020-09-01-module-3.md
+++ b/_posts/2020-09-01-module-3.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: Module 3
+permalink: module03.html
 description: Something
+start: 2020-09-05
+end: 2020-09-18
 ---
 
 Foo bar
